Explain the madness that is the world of cyrptographic hashes. Change back from SHA256 to CRYPT as default_password_scheme in Dovecot. Add ability for users to change their own passwords in Roundcube.

--- a/templates/aws-mirovoy-ref-arch-04-mail.yaml
+++ b/templates/aws-mirovoy-ref-arch-04-mail.yaml
@@ -2008,10 +2008,8 @@ Resources:
                             dbname=${MailDBName} \
                             user=${MailDBUser} password=${MailDBPassword}
 
-                    #We'll be using the encrypted password from the mysql
-                    #database. This is a change from xec.net and Flurdy,
-                    #which use CRYPT
-                    default_pass_scheme = SHA256
+                    # See the README for why this works.
+                    default_pass_scheme = CRYPT
 
                     #Set the password query to point to the users table:
                     password_query = SELECT id AS user, crypt AS password, \
